# KANeRF

./: Makefile  pyproject.toml
kanerf/model/: config.py  kanerf.py  kanerfield.py
